# weatherstation

./: .gitignore  README.md  pom.xml
src/main/java/io/github/icosadev/weatherstation/: App.java  Controller.java
src/main/java/io/github/icosadev/weatherstation/api/: Coordinates.java  GeocodingAPI.java  WeatherAPI.java  WeatherData.java  WebAPI.java
wsdesktop/: pom.xml
wsdesktop/src/main/java/io/github/icosadev/wsdesktop/: App.java  Controller.java  Coordinates.java  GeocodingAPI.java  MainMenuController.java  WeatherAPI.java  WeatherData.java  WeatherDisplayController.java  WebAPI.java
wsdesktop/src/main/java/io/github/icosadev/wsdesktop/api/: Coordinates.java  GeocodingAPI.java  WeatherAPI.java  WeatherData.java  WebAPI.java
wsdesktop/src/main/java/io/github/icosadev/wsdesktop/controller/: MainMenuController.java  WeatherDisplayController.java
wsdesktop/src/main/resources/: Main.fxml  MainMenu.fxml  Placeholder.fxml  WeatherDisplay.fxml
wsreciever/: Dockerfile  README.md  meson.build
wsreciever/src/: wsreciever.cpp  wsreciever.ino
